JBDS-486: add -X flags for more memory on 64-bit
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/modular_build@21483 a97e2381-89e5-4abb-bab3-167db6db766c